syntax = "proto3";

package otelcli.query.v1;

import "opentelemetry/proto/trace/v1/trace.proto";
import "opentelemetry/proto/logs/v1/logs.proto";
import "opentelemetry/proto/metrics/v1/metrics.proto";
import "opentelemetry/proto/resource/v1/resource.proto";

service QueryService {
  rpc SqlQuery(SqlQueryRequest) returns (SqlQueryResponse);
  rpc FollowSql(SqlQueryRequest) returns (stream SqlQueryResponse);
  rpc ClearTraces(ClearTracesRequest) returns (ClearResponse);
  rpc ClearLogs(ClearLogsRequest) returns (ClearResponse);
  rpc ClearMetrics(ClearMetricsRequest) returns (ClearResponse);
}

message TraceGroup {
  bytes trace_id = 1;
  repeated opentelemetry.proto.trace.v1.ResourceSpans resource_spans = 2;
}

message SqlQueryRequest {
  string query = 1;
}

message SqlQueryResponse {
  repeated TraceGroup trace_groups = 1;
  repeated opentelemetry.proto.logs.v1.ResourceLogs resource_logs = 2;
  repeated opentelemetry.proto.metrics.v1.ResourceMetrics resource_metrics = 3;
}

message ClearTracesRequest {}
message ClearLogsRequest {}
message ClearMetricsRequest {}
message ClearResponse {}
